added v7.2.8 as target framework

--- a/UmbracoALM.Test/UmbracoALM.Test.csproj
+++ b/UmbracoALM.Test/UmbracoALM.Test.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-
+    <TargetFramework>v4.7.2</TargetFramework>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
